[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_robot_screw"
version = "0.1.0"
description = "LeRobot third-party robot package for the SCREW dry-run integration tests."
requires-python = ">=3.10"
dependencies = [
  "lerobot",
  "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]

